--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
+    <title>Sergii Stepanenko | WEB-developer</title>
     <meta name="title" content="My Portfolio">
     <meta name="description" content="Here you can see my works and learn more about me">
 
@@ -44,6 +44,23 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <aside class="sidepanel">
+        <a href="#" class="sidepanel__link"><img src="icons/social/linkedin.svg" alt="linkedin"></a>
+        <a href="#" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
+        <a href="#" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
+        <div class="sidepanel__divider"></div>
+        <div class="sidepanel__text">social networks</div>
+    </aside>
+    <section class="promo">
+        <div class="container">
+            <div class="title title_fz16 promo__subtitle">My name is Sergii Stepanenko</div>
+            <h1 class="title title_fz48 promo__title">I'm web-developer from Kyiv, Ukraine</h1>
+            <div class="promo__btns">
+                <a href="#" class="promo__link btn">Portfolio</a>
+                <a href="#" class="promo__link">About me </a>
+            </div>
+        </div>
+    </section>
 
     <script src="js/script.js"></script>
 </body>
