--- a/src/index.html
+++ b/src/index.html
@@ -144,16 +144,18 @@
     <section class="about">
         <div class="container">
             <div class="about__wrapper">
-                <img src="img/main_photo.png" alt="photo" class="about__photo">
+                <div class="about__photo">
+                    <img src="img/main_photo.png" alt="photo">
+                </div>
                 <div class="about__descr">
                     <h2 class="title title_fz16 about__title">About me</h2>
                     <div class="title title_fz36 about__subtitle">My name is Sergii</div>
                     <div class="divider"></div>
-                    <p class="about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat maiores a tempora exercitationem sunt, maxime dolorem eaque assumenda beatae placeat, eveniet cupiditate! Amet molestias incidunt dolorum inventore libero rerum perspiciatis!</p>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                 </div>
                 <div class="about__skills">
                     <div class="about__skills-item">
-                        <div>
+                        <div class="about__skills-circle">
                             <img src="icons/about_me/web_development.svg" alt="web-dev">
                         </div>
                         <div>
@@ -167,7 +169,7 @@
                     </div>
 
                     <div class="about__skills-item">
-                        <div>
+                        <div class="about__skills-circle">
                             <img src="icons/about_me/mobile_dev.svg" alt="web-dev">
                         </div>
                         <div>
@@ -181,7 +183,7 @@
                     </div>
 
                     <div class="about__skills-item">
-                        <div>
+                        <div class="about__skills-circle">
                             <img src="icons/about_me/design.svg" alt="web-dev">
                         </div>
                         <div>
